added some small UI/UX features beofre output page

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="/frontend/src/index.css" rel="stylesheet">
-    <title>ai-study-assistant</title>
+    <link href="/favicon-v3.ico" rel="icon">
+    <title>MakeMeStudy</title>
   </head>
   <body>
     <div id="root"></div>
